added code to run smoothly on colab

--- a/SK_model.ipynb
+++ b/SK_model.ipynb
@@ -60,7 +60,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cirq\n",
+    "try:\n",
+    "    import cirq\n",
+    "except ImportError:\n",
+    "    !pip install --quiet cirq\n",
+    "    import cirq\n",
+    "\n",
     "depo = cirq.depolarize(\n",
     "    p=0.006\n",
     ")\n",
@@ -101,7 +106,10 @@
     "import cirq.google as cg\n",
     "import cirq.contrib.routing as ccr\n",
     "device = cg.Sycamore23\n",
-    "\n",
+    "try:\n",
+    "    import recirq\n",
+    "except ImportError:\n",
+    "    !pip install --quiet git+https://github.com/quantumlib/ReCirq\n",
     "from recirq.qaoa.problem_circuits import get_generic_qaoa_circuit\n",
     "from recirq.qaoa.gates_and_compilation import compile_problem_unitary_to_arbitrary_zz, \\\n",
     "    compile_driver_unitary_to_rx\n",
@@ -149,6 +157,12 @@
     }
    ],
    "source": [
+    "# Clone the entire repo.\n",
+    "!git clone -l -s https://github.com/dsfranca/KnowYourLimit.git knowlimits\n",
+    "\n",
+    "# Change directory into cloned repo\n",
+    "%cd knowlimits\n",
+    "\n",
     "from estimator import *\n",
     "estimate=estimator_brute_force_weighted(noise,problem_graph,device,gammas,betas)\n",
     "print(\"Expected energy of output: \",estimate[0],\"True ground state energy:\",estimate[1])"
