--- a/SK_model.ipynb
+++ b/SK_model.ipynb
@@ -157,6 +157,11 @@
     }
    ],
    "source": [
+    "try:\n",
+    "    import cvxgraphalgs\n",
+    "except ImportError:\n",
+    "    !pip install --quiet cvxgraphalgs\n",
+    "\n",
     "# Clone the entire repo.\n",
     "!git clone -l -s https://github.com/dsfranca/KnowYourLimit.git knowlimits\n",
     "\n",
@@ -288,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device=pytket.device.Device({}, {}, pytket.routing.SquareGrid(5,4)) "
+    "device=pytket.device.Device({}, {}, pytket.routing.SquareGrid(5,10)) "
    ]
   },
   {
